# soccer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  runBenchmarks.sh  runCleanCoverage.sh  runCoverage.sh  runCoverageAndDisplay.sh
src/common/data/field/: CMakeLists.txt  Camera.cpp  CameraMap.cpp  FieldState.cpp
src/common/data/referee/: CMakeLists.txt  GameCommand.cpp  GameEvent.cpp  GameStage.cpp  GameStageMessage.cpp  GameState.cpp  Team.cpp  TeamInfo.cpp
src/common/data/referee/gameEvent/: GameEvent.cpp
src/common/data/vision/: BallObservation.cpp  CMakeLists.txt  ChipFitResult.cpp  DetectionFrame.cpp  FilteredBall.cpp  FilteredRobot.cpp  FilteredVisionFrame.cpp  RobotObservation.cpp
src/common/data/world/: BallState.cpp  CMakeLists.txt  FieldState.cpp  RobotID.cpp  RobotParameters.cpp  RobotState.cpp  WorldState.cpp
src/common/math/: CMakeLists.txt
src/common/math/filters/: DEMAFilter.cpp  PosVelFilter1D.cpp  PosVelFilter2D.cpp
src/common/math/general/: QuadraticEquation.cpp
src/common/math/geometry/: Angle.cpp  BoundingBox2D.cpp  Circle.cpp  Line.cpp  LineBase.cpp  LineSegment.cpp  Polygon.cpp  Ray.cpp  Rectangle.cpp  RobotShape.cpp  Rotation.cpp  Shape.cpp  Triangle.cpp  Tube.cpp  Vector2.cpp  Vector3.cpp
src/common/utilities/geometry/: Angle.cpp  CMakeLists.txt  Circle.cpp  CommandSwitch.cpp  Flip.cpp  Line.cpp  LineSegment.cpp  Polygon.cpp  Rectangle.cpp  Rotation.cpp  Triangle.cpp  Tube.cpp  Vector2.cpp  Vector3.cpp
src/common/utilities/protoUtils/: CMakeLists.txt  CommandSwitch.cpp  Flip.cpp
src/framework/: ApplicationManager.cpp  ApplicationManager.h  CMakeLists.txt  main.cpp
src/framework/ai/: AI.cpp  AiBase.cpp  CMakeLists.txt
src/framework/ai/include/ai/: AI.h  AiBase.h
src/framework/autoreferee/: AutoReferee.cpp  CMakeLists.txt  rtt_autoreferee.cpp
src/framework/autoreferee/eventDetection/: AttackerToDefenseAreaDistanceDetector.cpp  BallPlacementDetector.cpp  BallPlacementInterferenceDetector.cpp  BotCollisionDetector.cpp  Context.h  DefenderFreeKickDistanceDetector.cpp  EventDetector.cpp  EventDetector.h  SingleEventDetector.cpp  SingleEventDetector.h  StopSpeedDetector.cpp
src/framework/autoreferee/include/autoreferee/: AutoReferee.h
src/framework/autoreferee/network/: GameControllerTcp.cpp  GameControllerTcp.h
src/framework/interface/: CMakeLists.txt  GameEventsWidget.cpp  GameEventsWidget.h  GameStateVisualizer.cpp  GameStateVisualizer.h  MainSettingsWidget.cpp  MainSettingsWidget.h  MainTeamSettingsWidget.cpp  MainTeamSettingsWidget.h  MainWindow.cpp  ReplayWidget.cpp  ReplayWidget.h  Visualizer.cpp  Visualizer.h
src/framework/interface/include/interface/: MainWindow.h
src/framework/interfaceAPI/: API.cpp  CMakeLists.txt  SettingsAPI.cpp
src/framework/interfaceAPI/include/interfaceAPI/: API.h  SettingsAPI.h
src/framework/logging/: CMakeLists.txt
src/framework/logging/logger/: BackLogger.cpp  CMakeLists.txt  LogCreator.cpp  LogHeader.h  LogReader.cpp  LogWriter.cpp
src/framework/logging/visionEvaluator/: CMakeLists.txt  visionEvaluator.cpp
src/framework/logging/visionLogger/: CMakeLists.txt  VisionLogHeader.h  VisionLogReader.cpp  VisionLogWriter.cpp
src/framework/logging/visionMatlab/: CMakeLists.txt  VisionMatlabLogger.cpp
src/framework/net/: CMakeLists.txt
src/framework/net/sslClient/: netraw.cpp  robocup_ssl_client.cpp
src/framework/refereeFilter/: CMakeLists.txt  RefereeFilter.cpp
src/framework/refereeFilter/include/refereeFilter/: CommandSwitch.h  RefereeFilter.h
src/framework/visionFilter/: BallAssigment.cpp  BallFilter.cpp  CMakeLists.txt  CameraFilter.cpp  CameraObjectFilter.cpp  CameraRobotFilter.cpp  GeometryFilter.cpp  ObjectFilter.cpp  RobotFilter.cpp  RobotOrientationFilter.cpp  RobotTrajectorySegment.cpp  VisionFilter.cpp  WorldFilter.cpp
src/framework/visionFilter/ball/: BallFilter.cpp  BallFlyFilter.cpp  BallGroundEKF.cpp  BallGroundFilter.cpp  BallTrajectorySegment.cpp  BallTrajectorySegment.h  CameraBallFilter.cpp  CameraBallFilter_v2.cpp  CameraBallGroundEKF.cpp  RobotTrajectorySegment.cpp  VirtualBallTracker.cpp
src/framework/visionFilter/ball/collision/: BallCollisionResult.cpp  BallCollisionResult.h  CollisionCalculations.cpp  CollisionCalculations.h  CollisionChecker.cpp  CollisionChecker.h  CollisionClassifier.cpp  FieldWallCollisionChecker.cpp  FieldWallCollisionChecker.h  VelocityChangeDetector.cpp
src/framework/visionFilter/ball/kickDetection/: AreaHeightDetector.cpp  AreaHeightDetector.h  CollisionEvent.cpp  (+17 more)
src/protobuf/: CMakeLists.txt  RobotInfo.cpp
src/protobuf/include/protobuf/: RobotInfo.h
src/protobuf/proto/: AISettings.proto  DebugInfo.proto  FrameLog.proto  GameState.proto  RobotCommand.proto  RobotInfo.proto  Settings.proto  Vector2f.proto  World.proto  WorldBall.proto  WorldRobot.proto  WorldVirtualBall.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_game_event.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_referee.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  ssl_game_controller_autoref.proto  ssl_game_controller_common.proto  ssl_game_controller_team.proto  ssl_game_event.proto  ssl_referee.proto
test/: CMakeLists.txt  main.cpp
test/benchmarks/: CMakeLists.txt  geometryMain.cpp
test/benchmarks/filters/: KalmanBenchmark.cpp
test/benchmarks/geometry/: SegmentBenchmark.cpp
test/common/containers/: CircularBufferTest.cpp
test/common/core/: RandomTest.cpp  TimeTest.cpp
test/common/field/: CameraMapTest.cpp  CameraTest.cpp  FieldStateTest.cpp
test/common/geometry/: AngleTest.cpp  BoundingBoxTest.cpp  CMakeLists.txt  CircleTest.cpp  LineTest.cpp  PolygonTest.cpp  RectangleTest.cpp  RobotShapeTest.cpp  RotationTest.cpp  TriangleTest.cpp  TubeTest.cpp  Vector2Test.cpp
test/common/math/: KalmanFilterTest.cpp
test/common/math/filters/: ConstantMATest.cpp  DEMAFilterTest.cpp  KalmanFilterTest.cpp  PosVelFilter2DTest.cpp
test/common/world/: RobotIDTest.cpp
test/helpers/: ProtoExamples.cpp  ProtoExamples.h  RandomWorldGeneration.cpp  RandomWorldGeneration.h
(+165 files in other folders)
